# find-recipes

./: .gitignore  Cargo.toml  clippy.toml  package-lock.json  package.json  turbo.json
apps/web/: next.config.js  package.json
apps/web-astro/: astro.config.mjs
apps/web-astro/src/: env.d.ts
apps/web-astro/src/middleware/: cache.ts  index.ts
apps/web-astro/src/pages/: cache.astro
apps/web-scraper/: package.json
apps/web-scraper/src/features/scraper/: index.ts
apps/web-scraper/src/features/scraper/map-html-to-recipe/: map-html-to-recipe-strategy.ts
apps/web-scraper/src/features/scraper/map-html-to-recipe/mappers/: map-spis-bedre-html-to-recipe.ts  map-valdemarsro-html-to-recipe.ts
apps/web-scraper/src/features/valdemarsro/: scraper.ts  seed-database.ts
apps/web-scraper/src/run/: create-data-files.ts
apps/web_crawler_rust/: Cargo.toml
crates/web_crawler/: Cargo.toml
crates/web_crawler/__generated/: spis-bedre.json  valdemarsro.json
crates/web_crawler/src/: common.rs  lib.rs  main.rs
