[workspace]
resolver = "2"
members = [
    "apps/web_crawler_rust",
    "crates/*"
]

default-members = []

# Declare dependencies used across workspace packages requires single version bump.
# ref: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.lints.clippy]
too_many_arguments = "allow"

[workspace.dependencies]
reqwest = { version = "0.11.23", default-features = false }
anyhow = "1.0.69"
