[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true }
async-recursion = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
scraper = "0.18.1"
futures = "0.3.30"
serde_json = "1.0.112"
serde = { version = "1.0.195", features = ["derive"] }

[dev-dependencies]
